--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -6,13 +6,18 @@
   "scripts": {
     "dev": "tsx watch src/index.ts",
     "build": "tsc",
-    "start": "node dist/index.js",
+    "start": "node dist/src/index.js",
+    "test": "vitest run --coverage",
+    "test:watch": "vitest --watch",
+    "test:specific": "vitest run --reporter=verbose",
+    "test:coverage": "vitest run --coverage --reporter=verbose",
+    "test:no-coverage": "vitest run --reporter=verbose",
+    "seed": "tsx prisma/seed.ts",
     "migrate:dev": "prisma migrate dev",
     "migrate:deploy": "prisma migrate deploy",
     "db:push": "prisma db push",
     "studio": "prisma studio",
     "generate": "prisma generate",
-    "db:seed": "tsx prisma/seed.ts",
     "db:clean": "prisma migrate reset --force"
   },
   "dependencies": {
@@ -24,22 +29,32 @@
     "bcryptjs": "^2.4.3",
     "core": "file:../../packages/core",
     "db-postgres": "file:../../packages/db-postgres",
+    "dompurify": "^3.2.6",
     "fastify": "^4.24.3",
+    "jsdom": "^26.1.0",
     "jsonwebtoken": "^9.0.2",
     "prisma": "^5.7.1",
     "shared-types": "file:../../packages/shared-types",
     "speakeasy": "^2.0.0",
+    "validator": "^13.15.15",
     "zod": "^3.22.4",
     "zod-to-json-schema": "^3.24.6"
   },
   "devDependencies": {
     "@faker-js/faker": "^9.8.0",
     "@types/bcryptjs": "^2.4.6",
+    "@types/dompurify": "^3.2.0",
+    "@types/jsdom": "^21.1.7",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.10.5",
     "@types/speakeasy": "^2.0.10",
+    "@types/supertest": "^6.0.2",
+    "@types/validator": "^13.15.2",
+    "@vitest/coverage-v8": "^1.6.0",
+    "supertest": "^7.0.0",
     "tsx": "^4.6.2",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "vitest": "^1.6.0"
   },
   "keywords": [],
   "author": ""
