--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -24,7 +24,7 @@
     "@fastify/cookie": "^9.3.1",
     "@fastify/cors": "^8.4.0",
     "@fastify/helmet": "^11.1.1",
-    "@fastify/oauth2": "^5.0.0",
+    "@fastify/oauth2": "^7.8.0",
     "@prisma/client": "^5.7.1",
     "bcryptjs": "^2.4.3",
     "core": "file:../../packages/core",
@@ -43,18 +43,18 @@
   "devDependencies": {
     "@faker-js/faker": "^9.8.0",
     "@types/bcryptjs": "^2.4.6",
-    "@types/dompurify": "^3.2.0",
     "@types/jsdom": "^21.1.7",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.10.5",
     "@types/speakeasy": "^2.0.10",
     "@types/supertest": "^6.0.2",
     "@types/validator": "^13.15.2",
-    "@vitest/coverage-v8": "^1.6.0",
+    "@vitest/coverage-v8": "^3.2.4",
     "supertest": "^7.0.0",
     "tsx": "^4.6.2",
     "typescript": "^5.3.3",
-    "vitest": "^1.6.0"
+    "vite": "^6.1.6",
+    "vitest": "^3.2.4"
   },
   "keywords": [],
   "author": ""
